# mdgoat

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  action.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  new_detector.md
.github/workflows/: ci.yml  publish.yml
examples/: README.md  clean-doc.md  messy-conversion.md  poisoned-contract.md
mdgoat/: __init__.py  canary.py  cleaner.py  cli.py  cost.py  differ.py  models.py  report.py  rules.py  scanner.py  scoring.py
mdgoat/detectors/: __init__.py  artifacts.py  efficiency.py  security.py  structure.py
tests/: test_artifacts.py  test_canary.py  test_cleaner.py  test_cli.py  test_cost.py  test_differ.py  test_scoring.py  test_security.py  test_structure.py
