[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mdgoat"
version = "0.1.0"
description = "The markdown quality gate for the AI input layer. Goats eat anything - your LLM shouldn't."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "mdgoat contributors" }]
keywords = [
    "markdown",
    "llm",
    "rag",
    "prompt-injection",
    "security",
    "lint",
    "markitdown",
    "unicode",
    "sanitization",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/shahcolate/mdgoat"
Issues = "https://github.com/shahcolate/mdgoat/issues"

[project.scripts]
mdgoat = "mdgoat.cli:main"

[tool.setuptools.packages.find]
include = ["mdgoat*"]
